k8s/api/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: chatbot-api
spec:
  selector:
    app: chatbot-api
  ports:
    - name: http
      port: 8000
      targetPort: http
